--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "clean": "rm -rf dist && rm -rf build",
     "start": "npm run clean && rollup -c --watch",
-    "build": "npm run clean && rollup -c --prod && cp -rf dist build",
+    "build": "npm run clean && rollup -c --production && cp -rf dist build",
     "test": "cross-env BABEL_ENV=test mocha --require @babel/register --require jsdom-global/register test/**/*.test.js --exit",
     "test:coverage": "nyc --check-coverage -- npm test",
     "test:e2e": "cross-env BABEL_ENV=test npm run test:e2e:services",
@@ -133,5 +133,6 @@
     "acorn": "^7.1.1",
     "serialize-javascript": "^2.1.1",
     "kind-of": "^6.0.3"
-  }
+  },
+  "packageManager": "yarn@4.3.1+sha512.af78262d7d125afbfeed740602ace8c5e4405cd7f4735c08feb327286b2fdb2390fbca01589bfd1f50b1240548b74806767f5a063c94b67e431aabd0d86f7774"
 }
